implement API request

--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -236,8 +236,7 @@ body {
     }
 }
 
-/* Centered placeholder in body */
-#hero {
+#trains {
     display: flex;
     justify-content: center;
     align-items: center;
