--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -286,6 +286,9 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
+  }
   .lowercase {
     text-transform: lowercase;
   }
