--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -2,7 +2,7 @@
 body {
     background-color: #ffffff;
     color: #000000;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "SBB Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 24px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
