--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -214,8 +214,8 @@
   .m-4 {
     margin: calc(var(--spacing) * 4);
   }
-  .mt-5 {
-    margin-top: calc(var(--spacing) * 5);
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
   }
   .block {
     display: block;
@@ -291,6 +291,12 @@
   }
   .text-center {
     text-align: center;
+  }
+  .text-left {
+    text-align: left;
+  }
+  .whitespace-pre-line {
+    white-space: pre-line;
   }
   .lowercase {
     text-transform: lowercase;
